--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,11 @@
-<table id="main-table" border="1">
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <input type="color" id="color">
+    </div>
+    <div class="col-md-12">
+      <table id="main-table" border="1">
+      </table>
+    </div>
+  </div>
+</div>
