--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <input type="color" id="color">
+      <span>Your ID is: <%= @user %></span>
     </div>
     <div class="col-md-12">
       <table id="main-table" border="1">
