--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>RorAssignment</title>
+  <title>ROR Assignment</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <meta charset="utf-8">
