--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <input type="color" id="color">
+      <input type="color" id="color" value="#000000">
       <span>Your ID is: <%= @user %></span>
     </div>
     <div class="col-md-12">
